# zspec

./: .coverage  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: api.md  cookbook.md  index.md  index.ru.md  translator.md  translator.ru.md  usage.md  usage.ru.md
docs/styles/: extra.css
src/zspec/: __init__.py  cache.py  explain.py  log.py  serialize.py  specification.py  translator.py  translators.py  utils.py
src/zspec/contrib/: __init__.py  django.py  elasticsearch.py  logging.py  pandas.py  polars.py  pydantic.py  pymongo.py  redis.py  sqlalchemy.py
tests/: test_cache.py  test_django.py  test_elasticsearch.py  test_explain.py  test_logging.py  test_matching.py  test_mongo.py  test_pandas.py  test_polars.py  test_pydantic.py  test_pymongo.py  test_redis.py  test_serialize.py  test_spec_of_and_filter.py  test_specification.py  test_sqlalchemy.py  test_translator.py  test_xor.py
