[project]
name = "zspec"
version = "1.0.4"
description = "Composable specification pattern for Python"
readme = "README.md"
authors = [
    { name = "Alexandr", email = "alexandr.panteleev2000@gmail.com" }
]
requires-python = ">=3.14"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]
dependencies = []

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.30.0",
]
sqlalchemy = [
    "sqlalchemy>=2.0",
]
django = [
    "django>=4.2",
]

[tool.pyrefly]
preset = "strict"
python-version = "3.14"
strict-callable-subtyping = true
check-unannotated-defs = true
infer-return-types = "checked"

[tool.pyrefly.errors]
bad-override = true
bad-override-mutable-attribute = true
bad-override-param-name = true
unbound-name = true

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "TC001",
    "TC003",
    "TC006",
    "D203",  # conflicts with D211
    "D213",  # conflicts with D212
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "D1",   # docstrings not required in tests
    "E402", # importorskip pattern
    "PLR2004", # magic numbers are fine in tests
    "S101", # assert is fine in tests
    "SLF001", # private member access is fine in tests
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
changelog_file = "CHANGELOG.md"
commit_parser = "conventional"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["uv_build>=0.11.11,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "django-stubs>=5.2.0",
    "pre-commit>=4.0",
    "pyrefly>=1.0.0",
    "pytest-cov>=6.0",
    "pytest>=8.0.0",
    "python-semantic-release>=9.0",
    "ruff>=0.15.14",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.30.0",
]
